crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__non_logical_newline_in_string_continuation.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Lpar,
        0..1,
    ),
    (
        NonLogicalNewline,
        1..2,
    ),
    (
        String(
            "a",
        ),
        6..9,
    ),
    (
        NonLogicalNewline,
        9..10,
    ),
    (
        String(
            "b",
        ),
        14..17,
    ),
    (
        NonLogicalNewline,
        17..18,
    ),
    (
        NonLogicalNewline,
        18..19,
    ),
    (
        String(
            "c",
        ),
        23..26,
    ),
    (
        String(
            "d",
        ),
        33..36,
    ),
    (
        NonLogicalNewline,
        36..37,
    ),
    (
        Rpar,
        37..38,
    ),
    (
        Newline,
        38..38,
    ),
]
```
