crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__numbers.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Int(
            47,
        ),
        0..4,
    ),
    (
        Int(
            10,
        ),
        5..9,
    ),
    (
        Int(
            13,
        ),
        10..16,
    ),
    (
        Int(
            0,
        ),
        17..18,
    ),
    (
        Int(
            123,
        ),
        19..22,
    ),
    (
        Int(
            1234567890,
        ),
        23..36,
    ),
    (
        Float(
            0.2,
        ),
        37..40,
    ),
    (
        Float(
            100.0,
        ),
        41..45,
    ),
    (
        Float(
            2100.0,
        ),
        46..51,
    ),
    (
        Complex {
            real: 0.0,
            imag: 2.0,
        },
        52..54,
    ),
    (
        Complex {
            real: 0.0,
            imag: 2.2,
        },
        55..59,
    ),
    (
        Int(
            0,
        ),
        60..63,
    ),
    (
        Int(
            11051210869376104954,
        ),
        64..82,
    ),
    (
        Int(
            0x995DC9BBDF1939FA995DC9BBDF1939FA,
        ),
        83..117,
    ),
    (
        Newline,
        117..117,
    ),
]
```
