crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__string.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        String(
            "double",
        ),
        0..8,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        String(
            "single",
        ),
        9..17,
    ),
    (
        String(
            "can\\'t",
        ),
        18..26,
    ),
    (
        String(
            "\\\\\\\"",
        ),
        27..33,
        TokenFlags(
            DOUBLE_QUOTES,
        ),
    ),
    (
        String(
            "\\t\\r\\n",
        ),
        34..42,
    ),
    (
        String(
            "\\g",
        ),
        43..47,
    ),
    (
        String(
            "raw\\'",
        ),
        48..56,
        TokenFlags(
            RAW_STRING_LOWERCASE,
        ),
    ),
    (
        String(
            "\\420",
        ),
        57..63,
    ),
    (
        String(
            "\\200\\0a",
        ),
        64..73,
    ),
    (
        Newline,
        73..73,
    ),
]
```
