crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__tet_too_low_dedent.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: "lex_invalid(source, Mode::Module)"
---
## Tokens
```
[
    (
        If,
        0..2,
    ),
    (
        True,
        3..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..9,
    ),
    (
        Indent,
        9..13,
    ),
    (
        Pass,
        13..17,
    ),
    (
        Newline,
        17..18,
    ),
    (
        Unknown,
        18..20,
    ),
    (
        Pass,
        20..24,
    ),
    (
        Newline,
        24..24,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: IndentationError,
        location: 18..20,
    },
]
```
